# eeg-ds004752

./: .gitignore  README.md  pyproject.toml
bootstrap/: colab_quickstart.py  get_data_colab.sh  install_runtime.sh  mount_drive.py  run_v56_feature_matrix_leakage_plan.sh  run_v56_feature_matrix_materializer_skeleton.sh  run_v56_feature_matrix_plan.sh  run_v56_tranche1_signal_pilot.sh  run_v56_tranche2_lock.sh  run_v56_tranche2_scaffold.sh  runtime_profile.py
docs/: 01_v55_doc_code_crosswalk.md  02_colab_local_runbook.md  06_bao_cao_tien_do_ket_qua_va_claim_boundary_2026-04-24.md  07_phase1_controls_technical_conclusion_2026-04-24.md  09_phase1_consistency_audit_todo_2026-04-24.md  11_phase1_prospective_ieeg_assisted_proposal_2026-04-24.md  12_phase1_signal_level_gate0_readiness_2026-04-24.md  14_phase1_go_no_go_decision_memo_2026-04-24.md  15_phase1_signal_readiness_operational_checklist_2026-04-24.md  16_phase1_prospective_execution_roadmap_2026-04-24.md  17_v55_to_v56_transition_lock_2026-04-24.md  18_v55_to_v56_transition_lock_manifest_2026-04-24.json  19_v56_repo_mapping_and_execution_roadmap_2026-04-24.md  20_v56_tranche1_signal_pilot_runbook_2026-04-24.md  21_session_handoff_2026-04-24.md  22_v56_tranche2_scaffold_runbook_2026-04-24.md  23_v56_tranche2_lock_runbook_2026-05-04.md  24_v56_feature_matrix_plan_runbook_2026-05-04.md  25_v56_feature_matrix_leakage_audit_plan_runbook_2026-05-04.md  26_v56_feature_matrix_materializer_skeleton_runbook_2026-05-04.md  V5_5_Integrated_Proposal_vi_complete.docx  V5_5_Master_Artifact_Dossier_Freeze_Prereg_Reporting_Control.docx  (+2 more)
(+268 files in other folders)
