[project]
name = "eeg-ds004752-v55"
version = "0.1.0"
description = "V5.5 implementation scaffold for ds004752 EEG/iEEG audit and controlled execution."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = []
signal = [
  "mne>=1.6",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
]

[project.scripts]
eeg-v55 = "src.cli:main"

[tool.unittest]
start-dir = "tests"

